# dose

./: .gitignore  .prettierignore  AGENTS.md  README.md  SKILL.md  components.json  download.py  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prepare_ocr.py  pyproject.toml  train.py  wrangler.jsonc  yolov12n-training.ipynb
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/guideline/: page.tsx
app/now/: page.tsx
app/verify/: page.tsx
components/common/: bbox-overlay.tsx  medication-card.tsx  plan-card.tsx  quick-tour-overlay.tsx  result-row.tsx  session-row.tsx
components/ui/: button.tsx  checkbox.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  select.tsx  spinner.tsx
demo/: scenarios.json  test-examples.md
kaggle/: README.md  train-yolo12n-200ep.ipynb  train-yolo12s-200ep.ipynb  train.ipynb
lib/: catalog.ts  demo.ts  feedback.ts  intake.ts  match.ts  ocr-quality.ts  ocr.ts  onboarding.ts  parser.ts  prescription-sanitizer.ts  report-speech.ts  speech.ts  storage.ts  verification.ts  verify.ts  yolo-safety.ts  yolo.ts
lib/types/: domain.ts  index.ts  session.ts  treatment.ts  verification.ts
public/: _headers
public/demo/: examples.json  scenarios.json
public/models/: class_names.json  drug_groups.json
scripts/: review-bundle-to-yolo.mjs
tests/: bun-test.d.ts  catalog.py  catalog.test.ts  demo.test.ts  feedback.test.ts  intake.test.ts  ocr-quality.test.ts  parser.py  parser.test.ts  report-speech.test.ts  test_pipeline.py  verification.test.ts  yolo.test.ts
types/: index.ts
(+8 files in other folders)
