[project]
name = "dose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.5.0",
    "onnxruntime>=1.27.0",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "tqdm>=4.68.3",
    "ultralytics>=8.4.78",
]
